[gd_scene load_steps=7 format=3 uid="uid://c7j2nqvx8s6wo"]

[ext_resource type="Script" uid="uid://bul76f0gu23h7" path="res://ui/MainMenu.gd" id="1_7rbta"]
[ext_resource type="Theme" uid="uid://dw65agedwcaxa" path="res://UITheme.tres" id="2_kcy3r"]
[ext_resource type="Texture2D" uid="uid://b231alc6vc7pm" path="res://Assets/background_maze.png" id="3_bmdl2"]
[ext_resource type="PackedScene" uid="uid://bljcl3vwkfu63" path="res://ui/OptionsMenu.tscn" id="4_qd8p6"]

[sub_resource type="Animation" id="Animation_mqh7n"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MainMenuContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dxjqm"]
_data = {
&"fade_in": SubResource("Animation_mqh7n")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_kcy3r")
script = ExtResource("1_7rbta")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bmdl2")
expand_mode = 1
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenuContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
metadata/_edit_use_anchors_ = true

[node name="TitleLabel" type="Label" parent="CanvasLayer/MainMenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "MAZE ESCAPE"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CanvasLayer/MainMenuContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 20
text = "Navigate the maze. Escape the enemy."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CanvasLayer/MainMenuContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="StartMenu" type="VBoxContainer" parent="CanvasLayer/MainMenuContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NewGameButton" type="Button" parent="CanvasLayer/MainMenuContainer/StartMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "New Game"

[node name="LoadGameButton" type="Button" parent="CanvasLayer/MainMenuContainer/StartMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Load Game"

[node name="OptionsButton" type="Button" parent="CanvasLayer/MainMenuContainer/StartMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="ExitButton" type="Button" parent="CanvasLayer/MainMenuContainer/StartMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit Game"

[node name="VersionLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -35.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_font_sizes/font_size = 14
text = "Version 1.0"
horizontal_alignment = 2

[node name="VersionLabel2" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1264.0
offset_top = -40.0
offset_right = -1145.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_font_sizes/font_size = 14
text = "Muhammd Jawad"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dxjqm")
}

[node name="OptionsMenu" parent="." instance=ExtResource("4_qd8p6")]
visible = false
layout_mode = 1
